tests/flow/docblock_flow/license_with_flow.js
/* Copyright example */
/* @flow */

("": void); // error
